@startuml Database Diagram

<style>
title {
  HorizontalAlignment right
  FontSize 24
'   FontColor blue
}

header {
  HorizontalAlignment center
  FontSize 16
'   FontColor purple
  FontStyle bold
}

' footer {
'   HorizontalAlignment left
'   FontSize 28
'   FontColor red
' }

legend {
  FontSize 30
  BackGroundColor yellow
  Margin 30
  Padding 50
}

caption {
  FontSize 32
}
</style>

' Определение стилей для элементов базы данных с одинаковыми отступами
!define PK(x)     <b><color:#b8861b>PK</color>   x</b>
!define FK(x)     <b><color:#aaaaaa>FK</color>   x</b>
!define FPK(x)    <b><color:#b8861b>FPK</color> x</b>
!define column(x) <b><color:#efefef><&media-record></color>     x</b>
!define table(x)  entity x << (T, white) >>

' Настройка стилей для всей диаграммы
skinparam {
    PackageStyle rectangle
    ArrowColor #2688d4
    ArrowThickness 1.5
    EntityBorderThickness 1.5
    EntityBorderColor #2688d4
    EntityBackgroundColor white
    EntityFontColor black
    EntityFontSize 14
    padding 4
    roundCorner 10
    defaultTextAlignment left
    shadowing false
}

' header some header

' footer some footer

title Database Diagram

' caption This is caption

' legend
' The legend
' end legend

' Определение таблиц базы данных
table(dictionaries) {
    PK(id): INT AUTO_INCREMENT
    column(guid): TEXT NOT NULL
    column(title): TEXT NOT NULL
    column(createdAt): TEXT NULL
    column(updatedAt): TEXT NULL
}

table(words) {
    PK(id): INT AUTO_INCREMENT
    column(guid): TEXT NOT NULL
    column(word): TEXT NOT NULL
    column(transcription): TEXT
    column(translation): TEXT
    column(explanation): TEXT
    column(definition): TEXT
    column(partOfSpeech): TEXT NOT NULL
    column(language): TEXT NOT NULL DEFAULT 'en'
    column(level): TEXT NOT NULL DEFAULT 'A1'
    column(isIrregular): BOOLEAN
    column(pronunciation): BLOB
    column(lastReviewDate): TIMESTAMP
    column(reviewCount): INT
    column(rate): INT
    column(createdAt): TEXT NULL
    column(updatedAt): TEXT NULL
    --
    FK(dictionaryId): INT
}

table(sets) {
    PK(id): INT AUTO_INCREMENT
    column(guid): TEXT NOT NULL
    column(title): TEXT NOT NULL
    column(description): TEXT
    column(lastReviewDate): TIMESTAMP
    column(reviewCount): INT
    column(createdAt): TEXT NULL
    column(updatedAt): TEXT NULL    
}

table(set_words) {
  FPK(setId): INT NOT NULL
  FPK(wordId): INT NOT NULL
}

table(tags) {
  PK(id): INT AUTO_INCREMENT
  column(title): TEXT NOT NULL
  column(createdAt): TEXT NULL
  column(updatedAt): TEXT NULL
}

table(word_tags) {
  FPK(wordId): INT NOT NULL
  FPK(tagId): INT NOT NULL
}

table(irregular_forms) {
  FPK(fistFormId): INT NOT NULL
  FPK(secondFormId): INT NOT NULL
  FPK(thirdFormId): INT
}

table(examples) {
  PK(id): INT AUTO_INCREMENT
  column(sentence): TEXT NOT NULL
  column(translation): TEXT
  --
  FK(wordId): INT
}

table(study_cards) {
  PK(id): INT AUTO_INCREMENT
  column(guid): TEXT NOT NULL
  column(title): TEXT NOT NULL
  column(description): TEXT
  column(dialogue): TEXT
  column(lastReviewDate): TIMESTAMP
  column(reviewCount): INT
  column(rate): INT
  column(createdAt): TEXT NULL
  column(updatedAt): TEXT NULL
  --
  FK(unitId): INT
}

table(study_card_items) {
  FPK(cardId): INT NOT NULL
  FPK(wordId): INT NOT NULL
}

table(test_cards) {
  PK(id): INT AUTO_INCREMENT
  column(guid): TEXT NOT NULL
  column(testType): TEXT
  column(title): TEXT NOT NULL
  column(description): TEXT
  column(text): TEXT
  column(mask): TEXT
  column(options): TEXT
  column(correctAnswers): TEXT
  column(lastReviewDate): TIMESTAMP
  column(reviewCount): INT
  column(rate): INT
  column(createdAt): TEXT NULL
  column(updatedAt): TEXT NULL
  --
  FK(testId): INT
}

table(units) {
    PK(id): INT AUTO_INCREMENT
    column(guid): TEXT NOT NULL
    column(title): TEXT NOT NULL
    column(description): TEXT
    column(lastReviewDate): TIMESTAMP
    column(reviewCount): INT
    column(createdAt): TEXT NULL
    column(updatedAt): TEXT NULL
}

table(grammar_tests) {
    PK(id): INT AUTO_INCREMENT
    column(guid): TEXT NOT NULL
    column(title): TEXT NOT NULL
    column(description): TEXT
    column(lastReviewDate): TIMESTAMP
    column(reviewCount): INT
    column(createdAt): TEXT NULL
    column(updatedAt): TEXT NULL
}

table(grammar_topics) {
    PK(id): INT AUTO_INCREMENT
    column(guid): TEXT NOT NULL
    column(title): TEXT NOT NULL
    column(description): TEXT
    column(content): TEXT NOT NULL
    column(language): TEXT NOT NULL DEFAULT 'en'
    column(lastReviewDate): TIMESTAMP
    column(reviewCount): INT
    column(createdAt): TEXT NULL
    column(updatedAt): TEXT NULL
    --
    FK(topicId): INT
}

table(grammar_topic_tests) {
    FPK(topicId): INT NOT NULL
    FPK(testId): INT NOT NULL
}

' Определение связей между таблицами
dictionaries ||--o{ words

units ||--o{ study_cards

words ||--o{ examples
word_tags ||--o{ tags
word_tags ||--o{ words

study_card_items ||--o{ study_cards
study_card_items ||--o{ words

irregular_forms ||--o{ words

set_words ||--o{ words
set_words ||--o{ sets

grammar_tests ||--o{ test_cards
grammar_topic_tests ||--o{ grammar_tests
grammar_topic_tests ||--o{ grammar_topics
grammar_topics ||--o{ grammar_topics : parent > child

@enduml